# paint

./: CMakeLists.txt  common.h  compute.vert  controls.h  display.frag  display.vert  fft.h  fft.vert  helperClass.cpp  helperClass.h  main.cpp  wave.h
model/: SU-122-44.mtl
